2022-12-21  Andrew Paprocki  <andrew@ishiboo.com>

	* debuginfod-client.c: Make compilable against newer curl.  PR29926

2022-11-15  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_query_server): Initialize
	response_data early.

2022-11-07  Aaron Merey  <amerey@redhat.com>

	* debuginfod-client.c (debuginfod_find_section): Don't treat 0 as an
	error code.

2022-11-04  Aaron Merey  <amerey@redhat.com>

	* debuginfod-client.c (debuginfod_find_section): Ensure rc
	is always updated with the most recent error code.

2022-11-03  Frank Ch. Eigler <fche@redhat.com>

	* debuginfod.cxx (handle_buildid): Correctly manage lifetime
	of debuginfod_client federation callout object.

2022-11-02  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (extract_section): Mark static.

2022-11-01  Aaron Merey  <amerey@redhat.com>

	* debuginfod-client.c (path_escape): Add early return.

2022-10-31  Aaron Merey  <amerey@redhat.com>

	* Makefile.am (libdebuginfod_so_LDLIBS): Add libelf.
	* debuginfod-client.c (debuginfod_find_section): New function.
	(path_escape): New function.
	(extract_section): New function.
	(cache_find_section): New function.
	(debuginfod_query_server): Add support for section queries.
	* debuginfod-find.c (main): Add support for section queries.
	* debuginfod.cxx (extract_section): New function.
	(handle_buildid_f_match): Add section parameter.  When non-empty,
	try to create response from section contents.
	(handle_buildid_r_match): Add section parameter.  When non-empty,
	try to create response from section contents.
	(handle_buildid_match): Add section parameter. Pass to
	handle_buildid_{f,r}_match.
	(handle_buildid): Handle section name when artifacttype is set to
	"section".  Query upstream servers via debuginfod_find_section
	when necessary.
	(debuginfod.h.in): Add declaration for debuginfod_find_section.
	(libdebuginfod.map): Add debuginfod_find_section.

2022-10-18  Daniel Thornburgh <dthorn@google.com>
